fixed button text overflow issues

--- a/client/src/styles/DetailView.scss
+++ b/client/src/styles/DetailView.scss
@@ -255,17 +255,8 @@
         margin-top: -1rem;
       }
 
-      a {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
       a.btn:not(:first-child) {
         margin-top: 10px;
-      }
-
-      .btn {
       }
     }
 
